possible fix for leading "/" issue when loading jar files